Update portfolio name from Mohammad Javad Ahmadi to Mehran Tamjidi

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <title>Mohammad Javad Ahmadi | AI & CV Portfolio</title>
+  <title>Mehran Tamjidi | AI & CV Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -67,7 +67,7 @@
     style="background-image:url('https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/main.jpg')"
   >
     <div class="relative z-10 px-6 max-w-3xl text-white" data-aos="fade-up">
-      <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Mohammad Javad Ahmadi</h1>
+      <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Mehran Tamjidi</h1>
       <p class="text-lg md:text-2xl mb-6">
         <span id="typed" class="text-cyan-300"></span>
       </p>
@@ -898,7 +898,7 @@
     <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6">📝 Short Biography</h2>
       <p class="leading-relaxed text-lg">
-        Mohammad Javad Ahmadi was born in 1996 in Sari near the Caspian Sea,
+        Mehran Tamjidi was born in 1996 in Sari near the Caspian Sea,
         Iran. He graduated from NODET in 2015 with a 4/4 diploma, earned his
         B.Sc. from Amirkabir University in 2019 (GPA 3.7/4), and completed his
         M.Sc. at KNTU in 2022 (GPA 4/4). He’s currently a Ph.D. candidate under
@@ -930,7 +930,7 @@
 
   <!-- Footer -->
   <footer class="text-center text-sm py-6 bg-slate-950 text-slate-400">
-    © <span id="year"></span> Mohammad Javad Ahmadi. All rights reserved.
+    © <span id="year"></span> Mehran Tamjidi. All rights reserved.
   </footer>
 
   <!-- Scripts -->
