--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section
     id="home"
     class="relative hero min-h-screen flex items-center justify-center text-center clip-path-bottom bg-cover bg-center"
-    style="background-image:url('https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/main.jpg')"
+    style="background-image:url('https://shining0611armor.github.io/Images/main.jpg')"
   >
     <div class="relative z-10 px-6 max-w-3xl text-white" data-aos="fade-up">
       <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Mehran Tamjidi</h1>
