--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           class="w-8 h-8"
           alt="Logo"
         />
-        MJ Ahmadi
+        Mehran Tamjidi
       </a>
       <button id="menuBtn" class="md:hidden text-2xl"><i class="fa-solid fa-bars"></i></button>
       <ul id="navList" class="hidden md:flex gap-6 text-sm">
@@ -90,15 +90,9 @@
     <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-right">
       <h2 class="text-3xl font-bold mb-6">About Me</h2>
       <p class="text-lg leading-relaxed">
-        Ph.D. candidate and AI engineer with 5+ years of experience developing
-        deep-learning solutions for surgical video analysis, computer vision,
-        and robotics. CTO of
-        <a href="https://www.mediversai.com/" class="text-blue-700 underline"
-          >MediversAI</a
-        >
-        and head of ARAS AI, VR & Software Group, I drive multi-disciplinary
-        teams toward innovations that enhance surgical training and patient
-        safety.
+I'm Mehran Tamjidi, an enthusiastic Computer Vision and AI Researcher pursuing my M.Sc. at K. N. Toosi University of Technology.
+My research focuses on Multimodal AI (Vision-Language Models), 3D Computer Vision, Generative AI, and Test-Time Generalization, among other emerging areas in artificial intelligence.
+I actively collaborate with international scholars on projects targeting top computer vision venues.
       </p>
     </div>
   </section>
