--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ I actively collaborate with international scholars on projects targeting top com
       <div class="mt-16 text-center" data-aos="fade-up" data-aos-delay="400">
         <i class="fa-brands fa-linkedin text-2xl align-middle mr-2"></i>
         <a
-          href="https://www.linkedin.com/in/mjahmadi/details/skills/"
+          href="https://www.linkedin.com/in/mehran-tamjidi-34293b229/details/skills/"
           class="text-blue-600 underline hover:text-blue-800"
           >More on LinkedIn</a
         >
@@ -892,13 +892,9 @@ I actively collaborate with international scholars on projects targeting top com
     <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6">📝 Short Biography</h2>
       <p class="leading-relaxed text-lg">
-        Mehran Tamjidi was born in 1996 in Sari near the Caspian Sea,
-        Iran. He graduated from NODET in 2015 with a 4/4 diploma, earned his
-        B.Sc. from Amirkabir University in 2019 (GPA 3.7/4), and completed his
-        M.Sc. at KNTU in 2022 (GPA 4/4). He’s currently a Ph.D. candidate under
-        Prof. Hamid D. Taghirad (GPA 4/4), CTO at MediversAI & SmarTeeth, and
-        leads the ARAS AI, VR & Software Group. His main research interests
-        include Robotics, Artificial Intelligence, and Computer Vision.
+Mehran Tamjidi was born in 1999 in Ahwaz, Iran, near the Karun River. He graduated from Dr. Hesabi Leading Government High School in Ahwaz and earned his B.Sc. in 2019 from Shahid Chamran University of Ahwaz with a GPA of 17.70/20, ranking second in his program.
+      He completed his M.Sc. at K. N. Toosi University of Technology (KNTU) in 2022 with a GPA of 18.43/20 (equivalent to 3.9/4), ranking first in his program.
+He is currently conducting research in multi-modal AI, generative models, 3D vision, and domain generalization, with a focus on developing methods suitable for publication in top-tier computer vision venues.
       </p>
     </div>
   </section>
@@ -908,7 +904,7 @@ I actively collaborate with international scholars on projects targeting top com
     <div class="max-w-screen-lg mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold mb-6" data-aos="zoom-in">✉️ Get in Touch</h2>
       <p class="mb-8 text-lg" data-aos="fade-up">Interested in collaboration or hiring? Send me a message below.</p>
-      <form action="mailto:mjahmadee@gmail.com" method="POST" enctype="text/plain" class="max-w-md mx-auto space-y-4" data-aos="fade-up" data-aos-delay="100">
+      <form action="mailto:mehrant.0611@gmail.com" method="POST" enctype="text/plain" class="max-w-md mx-auto space-y-4" data-aos="fade-up" data-aos-delay="100">
         <input type="text" name="Name" placeholder="Your Name" required class="w-full px-4 py-3 rounded-full bg-slate-800 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500" />
         <input type="email" name="Email" placeholder="Your Email" required class="w-full px-4 py-3 rounded-full bg-slate-800 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500" />
         <input type="text" name="Subject" placeholder="Subject" class="w-full px-4 py-3 rounded-full bg-slate-800 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500" />
@@ -916,8 +912,8 @@ I actively collaborate with international scholars on projects targeting top com
         <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-full shadow-lg font-semibold transition">Send Message</button>
       </form>
       <div class="mt-8 flex justify-center gap-6" data-aos="fade-up" data-aos-delay="200">
-        <a href="https://www.linkedin.com/in/mjahmadi" class="text-slate-200 hover:text-blue-500 text-2xl"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://github.com/mjahmadee" class="text-slate-200 hover:text-white text-2xl"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/mehran-tamjidi-34293b229/" class="text-slate-200 hover:text-blue-500 text-2xl"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/shining0611armor" class="text-slate-200 hover:text-white text-2xl"><i class="fa-brands fa-github"></i></a>
       </div>
     </div>
   </section>
@@ -937,7 +933,7 @@ I actively collaborate with international scholars on projects targeting top com
 
       // Typed.js
       new Typed('#typed', {
-        strings: ['AI Engineer', 'Computer Vision Researcher', 'CTO at MediversAI'],
+        strings: [ 'Computer Vision and AI Researcher', 'ML & DL Researcher', 'Digital Electronics Engineer'],
         typeSpeed: 80,
         backSpeed: 40,
         backDelay: 1500,
