--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@ I actively collaborate with international scholars on projects targeting top com
           <i class="fa-solid fa-globe text-3xl text-green-500"></i>
           <div>
             <div class="font-semibold">English</div>
-            <div class="text-sm text-slate-500">Fluent — MSRT Score: 80/100</div>
+            <div class="text-sm text-slate-500">Fluent — TOEFL iBT: Scheduled on January 4 </div>
           </div>
         </div>
       </div>
@@ -933,7 +933,7 @@ He is currently conducting research in multi-modal AI, generative models, 3D vis
 
       // Typed.js
       new Typed('#typed', {
-        strings: [ 'Computer Vision and AI Researcher', 'ML & DL Researcher', 'Digital Electronics Engineer'],
+        strings: [ 'Computer Vision and AI Researcher', 'ML / DL Researcher', 'Digital Electronics Engineer'],
         typeSpeed: 80,
         backSpeed: 40,
         backDelay: 1500,
