--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@ He is currently conducting research in multi-modal AI, generative models, 3D vis
 
       // Typed.js
       new Typed('#typed', {
-        strings: [ 'Computer Vision and AI Researcher', 'ML and DL Researcher', 'Digital Electronics Engineer'],
+        strings: [ 'Computer Vision and AI Researcher', 'Machine Learning and Deep Learning Researcher', 'Digital Electronics Engineer'],
         typeSpeed: 80,
         backSpeed: 40,
         backDelay: 1500,
