--- a/index.html
+++ b/index.html
@@ -854,17 +854,14 @@ I actively collaborate with international scholars on projects targeting top com
         <div>
           <h3 class="text-2xl font-semibold mb-4">Graduate</h3>
           <ul class="list-disc pl-6 space-y-2">
-            <li><a href="https://ut.ac.ir/en" class="underline">Deep Learning</a>: 20.0/20</li>
             <li><a href="https://en.kntu.ac.ir/" class="underline">Soft Computing</a>: 20.0/20</li>
             <li><a href="https://en.kntu.ac.ir/" class="underline">Model Predictive Control</a>: 20.0/20</li>
             <li><a href="https://en.kntu.ac.ir/" class="underline">Bio-Mechatronic Systems</a>: 20.0/20</li>
             <li><a href="https://en.kntu.ac.ir/" class="underline">Parallel Robots</a>: 19.5/20</li>
-            <li><a href="https://aut.ac.ir/en" class="underline">Advanced Robotics</a>: 18.0/20</li>
             <li><a href="https://en.kntu.ac.ir/" class="underline">Optimal Control</a>: 19.5/20</li>
             <li><a href="https://en.kntu.ac.ir/" class="underline">Large-Scale Systems</a>: 19.0/20</li>
             <li><a href="https://en.kntu.ac.ir/" class="underline">Nonlinear Control Systems</a>: 18.5/20</li>
             <li><a href="https://en.kntu.ac.ir/" class="underline">Fault Detection & Diagnosis</a>: 18.5/20</li>
-            <li><a href="https://aut.ac.ir/en" class="underline">Industrial Internet of Things (IIoT)</a>: 18.5/20</li>
           </ul>
         </div>
         <div>
@@ -933,7 +930,7 @@ He is currently conducting research in multi-modal AI, generative models, 3D vis
 
       // Typed.js
       new Typed('#typed', {
-        strings: [ 'Computer Vision and AI Researcher', 'Machine Learning and Deep Learning Researcher', 'Digital Electronics Engineer'],
+        strings: [ 'Computer Vision and AI Researcher', 'Machine Learning and Deep Learning Engineer', 'Digital Electronics Engineer'],
         typeSpeed: 80,
         backSpeed: 40,
         backDelay: 1500,
