--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ I actively collaborate with international scholars on projects targeting top com
         <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
           <i class="fa-solid fa-percent text-red-500 text-3xl mt-1"></i>
           <div>  
-            <div class="font-semibold">Ranked among Top 0.1% in Iran's National University Entrance Exam</div>
+            <div class="font-semibold">Ranked among Top 1% in Iran's National University Entrance Exam</div>
             <div class="text-sm text-slate-500">Summer 2015</div>
           </div>
         </div>
@@ -882,7 +882,7 @@ He is currently conducting research in multi-modal AI, generative models, 3D vis
   <section id="contact" class="py-20 bg-slate-900 text-slate-200">
     <div class="max-w-screen-lg mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold mb-6" data-aos="zoom-in">✉️ Get in Touch</h2>
-      <p class="mb-8 text-lg" data-aos="fade-up">Interested in collaboration or hiring? Send me a message below.</p>
+      <p class="mb-8 text-lg" data-aos="fade-up">Interested in collaboration? Send me a message below.</p>
       <form action="mailto:mehrant.0611@gmail.com" method="POST" enctype="text/plain" class="max-w-md mx-auto space-y-4" data-aos="fade-up" data-aos-delay="100">
         <input type="text" name="Name" placeholder="Your Name" required class="w-full px-4 py-3 rounded-full bg-slate-800 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500" />
         <input type="email" name="Email" placeholder="Your Email" required class="w-full px-4 py-3 rounded-full bg-slate-800 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500" />
