--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           class="w-8 h-8"
           alt="Logo"
         />
-        Mehran Tamjidi
+        M. Tamjidi
       </a>
       <button id="menuBtn" class="md:hidden text-2xl"><i class="fa-solid fa-bars"></i></button>
       <ul id="navList" class="hidden md:flex gap-6 text-sm">
@@ -76,7 +76,7 @@
           >Let’s Connect</a
         >
         <a
-          href="https://drive.google.com/file/d/12mfH_QxeocmGwL8oAGfFRh2LZSZSlrwE/view?usp=sharing"
+          href="https://drive.google.com/file/d/126dKtvHbFaRjNRLI02DaYx-IafkCrb0_/view?usp=drive_link"
           download
           class="bg-white/20 hover:bg-white/30 px-8 py-3 rounded-full border border-white shadow-lg backdrop-blur transition"
           >Download CV</a
