Remove Projects section from index.html
Removed the 'Projects' section from the index.html file.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
         <li><a href="#highlights" class="hover:text-blue-700">Highlights</a></li>
         <li><a href="#skills" class="hover:text-blue-700">Skills</a></li>
         <li><a href="#experience" class="hover:text-blue-700">Experience</a></li>
-        <li><a href="#projects" class="hover:text-blue-700">Projects</a></li>
         <li><a href="#publications" class="hover:text-blue-700">Publications</a></li>
         <li><a href="#education" class="hover:text-blue-700">Education</a></li>
         <li><a href="#academic-experiences" class="hover:text-blue-700">Academic Exp.</a></li>
@@ -375,56 +374,9 @@ I actively collaborate with international scholars on projects targeting top com
     </div>
   </section>
 
-  <!-- Selected Projects -->
-  <section id="projects" class="py-20 bg-gray-50">
-    <div class="max-w-screen-lg mx-auto px-6">
-      <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide" data-aos="zoom-in">
-        🚀 Selected Projects
-      </h2>
-      <div class="space-y-4" data-aos="fade-up">
-        <a href="https://www.mediversai.com/" class="block bg-white shadow-lg rounded-2xl p-4 flex gap-4 items-center hover:shadow-2xl transition">
-          <img src="https://mjahmadee.github.io/Images/mediversai.png" alt="MediversAI" class="w-16 h-16" />
-          <div><h3 class="text-lg font-semibold">Surgicise AI-Powered Software for Surgical Video Analysis & Skill Assessment</h3></div>
-        </a>
-        <a href="https://smarteeth.ai/" class="block bg-white shadow-lg rounded-2xl p-4 flex gap-4 items-center hover:shadow-2xl transition">
-          <img src="https://mjahmadee.github.io/Images/smarteeth.png" alt="SmarTeeth" class="w-16 h-16" />
-          <div><h3 class="text-lg font-semibold">SmarTeeth AI-Powered Software</h3></div>
-        </a>
-        <a href="https://aras.kntu.ac.ir/research-themes/ai-and-vr-in-medical-robotics/#:~:text=Real%2DTime%20Analyzer%20(-,ESERA,-)%0AThis%20software" class="block bg-white shadow-lg rounded-2xl p-4 flex gap-4 items-center hover:shadow-2xl transition">
-          <img src="https://mjahmadee.github.io/Images/aras.png" alt="ARAS" class="w-16 h-16" />
-          <div><h3 class="text-lg font-semibold">ARAS Surgical Analysis Software & Video-Guided Surgery System</h3></div>
-        </a>
-        <a href="https://aras.kntu.ac.ir/research-themes/ai-and-vr-in-medical-robotics/#:~:text=Video%20Understanding%20in%20Medical%20Application%3A%20Surgical%20Analysis%2C%20Skill%20Assessment%20and%20Transfer" class="block bg-white shadow-lg rounded-2xl p-4 flex gap-4 items-center hover:shadow-2xl transition">
-          <img src="https://mjahmadee.github.io/Images/aras.png" alt="ARAS" class="w-16 h-16" />
-          <div><h3 class="text-lg font-semibold">Video Understanding: Surgical Analysis, Skill Assessment & Transfer</h3></div>
-        </a>
-        <a href="https://aras.kntu.ac.ir/research-themes/ai-and-vr-in-medical-robotics/#:~:text=Computer%2DAided%20Detection%20and%20Diagnosis%20in%20Medical%20Imaging" class="block bg-white shadow-lg rounded-2xl p-4 flex gap-4 items-center hover:shadow-2xl transition">
-          <img src="https://mjahmadee.github.io/Images/aras.png" alt="ARAS" class="w-16 h-16" />
-          <div><h3 class="text-lg font-semibold">Computer-Aided Detection & Diagnosis in Medical Imaging</h3></div>
-        </a>
-        <a href="https://aras.kntu.ac.ir/research-themes/ai-and-vr-in-medical-robotics/#:~:text=Smart%20Surgical%20Training%3A%20Phantom%2C%20Gamification%2C%20and%20VR/MR%20approaches" class="block bg-white shadow-lg rounded-2xl p-4 flex gap-4 items-center hover:shadow-2xl transition">
-          <img src="https://mjahmadee.github.io/Images/aras.png" alt="ARAS" class="w-16 h-16" />
-          <div><h3 class="text-lg font-semibold">Smart Surgical Training: Phantom, Gamification & VR/MR</h3></div>
-        </a>
-        <a href="https://github.com/MJAHMADEE/DeepLearning2022" class="block bg-white shadow-lg rounded-2xl p-4 flex gap-4 items-center hover:shadow-2xl transition">
-          <img src="https://mjahmadee.github.io/Images/git1.png" alt="Deep Learning Projects" class="w-16 h-16" />
-          <div>
-            <h3 class="text-lg font-semibold">Selected Deep Learning Projects</h3>
-            <p class="text-sm text-gray-500">
-              Image Captioning, Estimating Cryptocurrency Prices, Extractive Question Answering System, Intent Classification, Object Detection and Counting, Medical Imaging, Analysis of Satellite Images.
-            </p>
-          </div>
-        </a>
-      </div>
-      <div class="mt-6 text-center" data-aos="fade-up" data-aos-delay="200">
-        <i class="fa-brands fa-github text-2xl align-middle mr-2"></i>
-        <a href="https://github.com/MJAHMADEE" class="text-blue-600 underline hover:text-blue-800">
-          More on GitHub</a>
-      </div>
-    </div>
-  </section>
 
-  <!-- Selected Publications -->
+
+  <!-- Publications -->
   <section id="publications" class="py-20 bg-white">
     <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
       <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">📑 Selected Publications</h2>
