--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         <li><a href="#about" class="hover:text-blue-700">About</a></li>
         <li><a href="#highlights" class="hover:text-blue-700">Highlights</a></li>
         <li><a href="#skills" class="hover:text-blue-700">Skills</a></li>
-        <li><a href="#experience" class="hover:text-blue-700">Experience</a></li>
         <li><a href="#publications" class="hover:text-blue-700">Publications</a></li>
         <li><a href="#education" class="hover:text-blue-700">Education</a></li>
         <li><a href="#academic-experiences" class="hover:text-blue-700">Academic Exp.</a></li>
@@ -103,7 +102,7 @@ I actively collaborate with international scholars on projects targeting top com
         class="text-4xl font-bold mb-12 text-center uppercase tracking-wide"
         data-aos="zoom-in"
       >
-        🌟 Career Highlights
+        🌟 Highlights
       </h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
         <div class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition" data-aos="fade-up">
@@ -293,86 +292,6 @@ I actively collaborate with international scholars on projects targeting top com
     </div>
   </section>
 
-  <!-- Professional Experience -->
-  <section id="experience" class="py-20 bg-slate-100">
-    <div class="max-w-screen-lg mx-auto px-6">
-      <h2 class="text-4xl font-bold mb-12 text-center uppercase tracking-wide" data-aos="zoom-in">
-        💼 Professional Experience
-      </h2>
-      <div class="space-y-12">
-        <!-- ARAS AI & VR / Farabi Eye Hospital -->
-        <div class="bg-white shadow-lg rounded-2xl p-8 transition hover:scale-105" data-aos="fade-right">
-          <div class="flex items-center gap-4 mb-4">
-            <a href="https://aras.kntu.ac.ir/ai" class="flex items-center gap-2">
-              <img src="https://mjahmadee.github.io/Images/aras.png" alt="ARAS" class="w-10 h-10" />
-              <span class="text-2xl font-semibold">ARAS AI & VR Group</span>
-            </a>
-            <span class="text-xl font-semibold">|</span>
-            <a href="https://en.tums.ac.ir/en/page/97/farabi-hospital" class="flex items-center gap-2">
-              <img src="https://mjahmadee.github.io/Images/farabi.png" alt="Farabi" class="w-10 h-10" />
-              <span class="text-2xl font-semibold">Farabi Eye Hospital</span>
-            </a>
-            <span class="ml-auto text-sm text-slate-500">2019 – Present</span>
-          </div>
-          <p class="text-lg">
-            Head of
-            <a href="https://aras.kntu.ac.ir/ai" class="underline">ARAS AI, VR & Software Group</a>.
-            Over 5 years leading R&D, development, and deployment of AI & robotics products.
-          </p>
-        </div>
-        <!-- MediversAI CTO -->
-        <div class="bg-white shadow-lg rounded-2xl p-8 transition hover:scale-105" data-aos="fade-right" data-aos-delay="100">
-          <div class="flex items-center gap-4 mb-4">
-            <a href="https://www.mediversai.com/" class="flex items-center gap-2">
-              <img src="https://mjahmadee.github.io/Images/mediversai.png" alt="MediversAI" class="w-10 h-10" />
-              <span class="text-2xl font-semibold">MediversAI</span>
-            </a>
-            <span class="ml-auto text-sm text-slate-500">2023 – Present</span>
-          </div>
-          <p class="text-lg">
-            Chief Technology Officer (CTO), AI Specialist & Software Dev. Manager.
-            Leading full-stack engineering and AI innovation for advanced surgical video analytics.
-          </p>
-        </div>
-        <!-- SmarTeeth & Smartory -->
-        <div class="bg-white shadow-lg rounded-2xl p-8 transition hover:scale-105" data-aos="fade-right" data-aos-delay="200">
-          <div class="flex items-center gap-4 mb-4">
-            <a href="https://smarteeth.ai/" class="flex items-center gap-2">
-              <img src="https://mjahmadee.github.io/Images/smarteeth.png" alt="SmarTeeth" class="w-10 h-10" />
-              <span class="text-2xl font-semibold">SmarTeeth</span>
-            </a>
-            <span class="text-xl font-semibold">|</span>
-            <a href="https://smartory.co/" class="flex items-center gap-2">
-              <img src="https://mjahmadee.github.io/Images/Artboard-1mdpi-1.png" alt="Smartory" class="w-10 h-10" />
-              <span class="text-2xl font-semibold">Smartory</span>
-            </a>
-            <span class="ml-auto text-sm text-slate-500">2023 – Present</span>
-          </div>
-          <p class="text-lg">
-            Technical Lead in AI, CV & Software Dev. Architected deep-learning pipelines for dental X-ray analysis and managed cross-functional teams.
-          </p>
-        </div>
-        <!-- RSI & ICRoM/IEEE -->
-        <div class="bg-white shadow-lg rounded-2xl p-8 transition hover:scale-105" data-aos="fade-right" data-aos-delay="300">
-          <div class="flex items-center gap-4 mb-4">
-            <a href="https://rsiran.ir/en/" class="flex items-center gap-2">
-              <img src="https://mjahmadee.github.io/Images/rsi.png" alt="RSI" class="w-10 h-10" />
-              <span class="text-2xl font-semibold">RSI</span>
-            </a>
-            <span class="text-xl font-semibold">|</span>
-            <a href="https://icrom.ir/" class="flex items-center gap-2">
-              <img src="https://mjahmadee.github.io/Images/ieee.png" alt="ICRoM" class="w-10 h-10" />
-              <span class="text-2xl font-semibold">ICRoM & IEEE</span>
-            </a>
-            <span class="ml-auto text-sm text-slate-500">2019 – Present</span>
-          </div>
-          <p class="text-lg">
-            IT Committee Chair, Publications & Student Committee Member. Driving conference organization, technical publications, and student engagement in robotics & AI.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
 
 
 
