Update course list and contact message wording

--- a/index.html
+++ b/index.html
@@ -658,14 +658,24 @@ I actively collaborate with international scholars on projects targeting top com
         <div>
           <h3 class="text-2xl font-semibold mb-4">Graduate</h3>
           <ul class="list-disc pl-6 space-y-2">
-            <li><a href="https://en.kntu.ac.ir/" class="underline">Soft Computing</a>: 20.0/20</li>
-            <li><a href="https://en.kntu.ac.ir/" class="underline">Model Predictive Control</a>: 20.0/20</li>
-            <li><a href="https://en.kntu.ac.ir/" class="underline">Bio-Mechatronic Systems</a>: 20.0/20</li>
-            <li><a href="https://en.kntu.ac.ir/" class="underline">Parallel Robots</a>: 19.5/20</li>
-            <li><a href="https://en.kntu.ac.ir/" class="underline">Optimal Control</a>: 19.5/20</li>
-            <li><a href="https://en.kntu.ac.ir/" class="underline">Large-Scale Systems</a>: 19.0/20</li>
-            <li><a href="https://en.kntu.ac.ir/" class="underline">Nonlinear Control Systems</a>: 18.5/20</li>
-            <li><a href="https://en.kntu.ac.ir/" class="underline">Fault Detection & Diagnosis</a>: 18.5/20</li>
+  <li>
+    <a href="https://ut.ac.ir/en" class="underline">Neural Networks and Deep Learning</a>: 19.22/20 |
+    <a href="https://ut.ac.ir/en" class="underline">University of Tehran</a> – Instructor:
+  </li>
+  <li>
+    <a href="https://en.kntu.ac.ir/" class="underline">Probabilistic Graphical Models</a>: 19.55/20 |
+    <a href="https://en.kntu.ac.ir/" class="underline">KNTU</a> – Instructor:
+  </li>
+  <li>
+    <a href="https://en.kntu.ac.ir/" class="underline">Machine Learning (ML)</a>: 19.75/20 |
+    <a href="https://en.kntu.ac.ir/" class="underline">KNTU</a> – Instructor:
+  </li>
+  <li>
+    <a href="https://en.kntu.ac.ir/" class="underline">Advanced Mathematics for ML</a>: 20/20 |
+    <a href="https://en.kntu.ac.ir/" class="underline">KNTU</a> – Instructor:
+    <a href="https://scholar.google.com/citations?hl=en&user=xL4n9qYAAAAJ&view_op=list_works&sortby=pubdate" class="underline">Dr. Behrooz Nasihatkon</a>
+  </li>
+
           </ul>
         </div>
         <div>
@@ -704,7 +714,7 @@ He is currently conducting research in multi-modal AI, generative models, 3D vis
   <section id="contact" class="py-20 bg-slate-900 text-slate-200">
     <div class="max-w-screen-lg mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold mb-6" data-aos="zoom-in">✉️ Get in Touch</h2>
-      <p class="mb-8 text-lg" data-aos="fade-up">Interested in collaboration? Send me a message below.</p>
+      <p class="mb-8 text-lg" data-aos="fade-up">If you’re interested in collaborating, please send me a message below.</p>
       <form action="mailto:mehrant.0611@gmail.com" method="POST" enctype="text/plain" class="max-w-md mx-auto space-y-4" data-aos="fade-up" data-aos-delay="100">
         <input type="text" name="Name" placeholder="Your Name" required class="w-full px-4 py-3 rounded-full bg-slate-800 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500" />
         <input type="email" name="Email" placeholder="Your Email" required class="w-full px-4 py-3 rounded-full bg-slate-800 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500" />
