--- a/index.html
+++ b/index.html
@@ -659,21 +659,16 @@ I actively collaborate with international scholars on projects targeting top com
           <h3 class="text-2xl font-semibold mb-4">Graduate</h3>
           <ul class="list-disc pl-6 space-y-2">
   <li>
-    <a href="https://ut.ac.ir/en" class="underline">Neural Networks and Deep Learning</a>: 19.22/20 |
-    <a href="https://ut.ac.ir/en" class="underline">University of Tehran</a> – Instructor:
+    <a href="https://ut.ac.ir/en" class="underline">Neural Networks and Deep Learning</a>: 19.22/20  
   </li>
   <li>
-    <a href="https://en.kntu.ac.ir/" class="underline">Probabilistic Graphical Models</a>: 19.55/20 |
-    <a href="https://en.kntu.ac.ir/" class="underline">KNTU</a> – Instructor:
+    <a href="https://en.kntu.ac.ir/" class="underline">Probabilistic Graphical Models</a>: 19.55/20
   </li>
   <li>
-    <a href="https://en.kntu.ac.ir/" class="underline">Machine Learning (ML)</a>: 19.75/20 |
-    <a href="https://en.kntu.ac.ir/" class="underline">KNTU</a> – Instructor:
+    <a href="https://en.kntu.ac.ir/" class="underline">Machine Learning (ML)</a>: 19.75/20 
   </li>
   <li>
-    <a href="https://en.kntu.ac.ir/" class="underline">Advanced Mathematics for ML</a>: 20/20 |
-    <a href="https://en.kntu.ac.ir/" class="underline">KNTU</a> – Instructor:
-    <a href="https://scholar.google.com/citations?hl=en&user=xL4n9qYAAAAJ&view_op=list_works&sortby=pubdate" class="underline">Dr. Behrooz Nasihatkon</a>
+    <a href="https://en.kntu.ac.ir/" class="underline">Advanced Mathematics for ML</a>: 20/20 
   </li>
 
           </ul>
