--- a/index.html
+++ b/index.html
@@ -670,6 +670,9 @@ I actively collaborate with international scholars on projects targeting top com
   <li>
     <a href="https://en.kntu.ac.ir/" class="underline">Advanced Mathematics for ML</a>: 20/20 
   </li>
+    <li>
+    <a href="https://en.kntu.ac.ir/" class="underline">Advanced Microprocessors</a>: 18.25/20 
+  </li>
 
           </ul>
         </div>
