--- a/index.html
+++ b/index.html
@@ -510,47 +510,23 @@ I actively collaborate with international scholars on projects targeting top com
           </div>
         </div>
 
-        <!-- Reviewer -->
-        <div>
-          <h3 class="text-2xl font-semibold mb-4 flex items-center gap-2">📰 Reviewer</h3>
-          <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/ieee.png" alt="IEEE" class="w-8 h-8" />
-              <div>
-                <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=87" class="font-semibold underline">IEEE Transactions on Control Systems Technology</a>
-                <div class="text-sm text-slate-500">2023 – Present</div>
-              </div>
-            </div>
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/ieee.png" alt="IEEE" class="w-8 h-8" />
-              <div>
-                <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8253409" class="font-semibold underline">IEEE Transactions on Medical Robotics & Bionics</a>
-                <div class="text-sm text-slate-500">2023 – Present</div>
-              </div>
-            </div>
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/jama.png" alt="JAMA" class="w-8 h-8" />
-              <div>
-                <a href="https://jamanetwork.com/journals/jama" class="font-semibold underline">Journal of the American Medical Association (JAMA)</a>
-                <div class="text-sm text-slate-500">2024 – Present</div>
-              </div>
-            </div>
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/ieee.png" alt="Journal of Control" class="w-8 h-8" />
-              <div>
-                <a href="https://joc.kntu.ac.ir/en" class="font-semibold underline">Journal Of Control</a>
-                <div class="text-sm text-slate-500">2023 – Present</div>
-              </div>
-            </div>
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/ieee.png" alt="ICRoM" class="w-8 h-8" />
-              <div>
-                <a href="https://icrom.ir/" class="font-semibold underline">International Conf. on Robotics & Mechatronics</a>
-                <div class="text-sm text-slate-500">2022 – Present</div>
-              </div>
-            </div>
-          </div>
-        </div>
+<!-- Reviewer -->
+<div class="flex flex-col items-center justify-center text-center my-10">
+  <h3 class="text-2xl font-semibold mb-6 flex items-center gap-2 justify-center">📰 Reviewer</h3>
+  
+  <div class="bg-gray-50 shadow rounded-lg p-6 flex flex-col items-center gap-3 hover:shadow-lg transition w-full max-w-md">
+    <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/AAAI_Logo.png?raw=true" 
+         alt="AAAI 2026" 
+         class="w-12 h-12" />
+    <div>
+      <a href="https://aaai.org/Conferences/AAAI-26/" 
+         class="font-semibold underline text-lg">
+        The 40th Annual AAAI Conference on Artificial Intelligence
+      </a>
+      <div class="text-sm text-slate-500">2023 – Present</div>
+    </div>
+  </div>
+</div>
 
   <!-- Honors & Awards -->
   <section id="honors" class="py-20 bg-gray-50">
