--- a/index.html
+++ b/index.html
@@ -514,19 +514,22 @@ I actively collaborate with international scholars on projects targeting top com
 <div class="my-10">
   <h3 class="text-2xl font-semibold mb-6 flex items-center gap-2">📰 Reviewer</h3>
   
-  <div class="bg-gray-50 shadow rounded-lg p-6 flex items-start gap-3 hover:shadow-lg transition w-full max-w-3xl">
-    <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/AAAI_Logo.png?raw=true" 
-         alt="AAAI 2026" 
-         class="w-12 h-12 flex-shrink-0" />
-    <div class="whitespace-nowrap overflow-x-auto">
-      <a href="https://aaai.org/Conferences/AAAI-26/" 
-         class="font-semibold underline text-lg">
-        The 40th Annual AAAI Conference on Artificial Intelligence (AAAI 2026)
-      </a>
-      <div class="text-sm text-slate-500">2025</div>
+  <div class="flex justify-center">
+    <div class="bg-gray-50 shadow rounded-lg p-6 flex items-start gap-3 hover:shadow-lg transition w-full max-w-3xl">
+      <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/AAAI_Logo.png?raw=true" 
+           alt="AAAI 2026" 
+           class="w-12 h-12 flex-shrink-0" />
+      <div class="whitespace-nowrap">
+        <a href="https://aaai.org/Conferences/AAAI-26/" 
+           class="font-semibold underline text-lg">
+          The 40th Annual AAAI Conference on Artificial Intelligence (AAAI 2026)
+        </a>
+        <div class="text-sm text-slate-500">2025</div>
+      </div>
     </div>
   </div>
 </div>
+
 
 
   <!-- Honors & Awards -->
